# BotC-Tracker

./: .gitignore  docker-compose.yml  tsconfig.json
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1722870644_initial.py  1724033060_add_drunk_saw_role_id_field_to_game.py
backend/app/: __init__.py  app.py  config.py  database.py  exceptions.py  spec.py
backend/app/crud/: __init__.py  _base.py  games.py  games_roles.py  roles.py  scripts.py  scripts_roles.py
backend/app/middleware/: __init__.py  log.py
backend/app/models/: __init__.py  _base.py  game.py  games_roles.py  role.py  script.py  scripts_roles.py
backend/app/routes/: __init__.py  games.py  roles.py  scripts.py
backend/app/schemas/: __init__.py  _base.py  game.py  games_roles.py  messages.py  role.py  script.py  scripts_roles.py
backend/app/utils/: logger.py
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json  webpack.config.mjs
frontend/public/: index.html
frontend/src/: App.tsx  index.tsx  types.ts
frontend/src/api/: api.ts
frontend/src/components/: index.ts
frontend/src/components/APIContextProvider/: APIContextProvider.tsx  index.ts
frontend/src/components/ChartPage/: ChartPage.tsx
frontend/src/components/DataRecovery/: DataRecovery.tsx  index.ts
frontend/src/components/GameForm/: GameForm.tsx  GameFormReducer.ts  index.ts
frontend/src/components/GameList/: GameList.tsx
frontend/src/components/Main/: Main.tsx
frontend/src/context/: index.ts  useAPIContext.ts
proxy/: nginx.conf
(+26 files in other folders)
