[tool.poetry]
name = "botc-tracker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.13.2"
flask = "^3.0.3"
gunicorn = "^22.0.0"
sqlalchemy = "^2.0.31"
marshmallow = "^3.21.3"
flasgger = "^0.9.7.1"
apispec-webframeworks = "^1.1.0"
apispec = "^6.6.1"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
mypy = "^1.11.0"
isort = "^5.13.2"
toml = "^0.10.2"
pylint = "^3.2.6"
pydocstyle = "^6.3.0"

[tool.pydocstyle]
match-dir = "^(?!alembic).*"

[tool.isort]
profile = "black"

[tool.mypy]
exclude = ["^alembic"]

[[tool.mypy.overrides]]
module = ["apispec_webframeworks.flask", "flasgger.*", "openapi_spec_validator"]
ignore_missing_imports = true

[tool.pylint.MASTER]
ignore-patterns = ["tests", "alembic"]

[tool.pylint.'MESSAGES CONTROL']
disable = ["R0903", "R0801", "W1203"]
max-line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
